--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <style>
-      body{color:black;}
+      body{background-color:black;}
       h1{color:white;font-size:2vw;}
     </style>
     <title>Test subject 1</title>
