--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <style>
       body{background-color:black;}
       h1{color:white;font-size:2vw;}
+      th{color: black;}
+      td{color: blueviolet;}
     </style>
     <title>Test subject 1</title>
   </head>
@@ -11,6 +13,19 @@
   <body>
     <h1>This is a test project</h1>
     <button>Click Me!!!</button>
+
+    <div style="background-color: aqua;">
+      <table>
+        <tr>
+          <th>Row 1</th><td>Test1</td>
+        </tr>
+
+        <tr>
+          <th>Row 2</th><td>Test2</td>
+        </tr>
+      </table>
+    </div>
+
   </body>
   
 </html>
