--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Embedded CSS -->
     <style>
       body{background-color:black;}
       h1{color:white;font-size:2vw;}
       th{color: black;}
       td{color: blueviolet;}
     </style>
+
+    <!-- JavaScript -->
+    <script>function alertUser(){alert('Hello World!!!');}</script>
+
     <title>Test subject 1</title>
   </head>
   
   <body>
     <h1>This is a test project</h1>
-    <button>Click Me!!!</button>
+    <button onclick="alertUser()">Click Me!!!</button>
 
     <div style="background-color: aqua;">
       <table>
