--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Embedded CSS -->
     <style>
       body{background-color:black;}
-      h1{color:white;font-size:2vw;}
+      h1{color:white;font-size:4vw;}
       th{color: black;}
       td{color: blueviolet;}
     </style>
@@ -25,7 +25,8 @@
     <br><br>
     
     <div style="background-color: aqua;">
-      <table>
+      <table style="border: 2px solid rgb(91, 229, 158); width: 40%; margin-left: auto; margin-right: auto;">
+
         <tr>
           <th>Row 1</th><td>Test1</td>
         </tr>
@@ -33,6 +34,7 @@
         <tr>
           <th>Row 2</th><td>Test2</td>
         </tr>
+
       </table>
     </div>
 
