--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br><br>
     
     <div style="background-color: aqua;">
-      <table style="border: 2px solid rgb(91, 229, 158); width: 40%; margin-left: auto; margin-right: auto;">
+      <table style="border: 2px solid rgb(91, 229, 158); width: 40%; margin-left: auto; margin-right: auto; background-color: hotpink;">
 
         <tr>
           <th>Row 1</th><td>Test1</td>
