--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <script>
         $(document).ready(function(){
           $("#button1").click(function(){
-            $("hidden").slideDown("slow");
+            $("#hidden").slideDown("slow");
           })
         });
         
