--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         $(document).ready(function(){
           $("#button1").click(function(){
             
-            $("#hidden").slideToggle("slow");
+            $("#hidden").fadeToggle("slow");
            
           })
         });
