--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           $("#button1").click(function(){
             
             var move = $("#hidden");
-            move.animate({left:'15%'},"slow");
-            move.animate({right:'15%'},"slow");
+            move.animate({left:'150px'},"slow");
+            move.animate({right:'150px'},"slow");
            
           })
         });
