--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       th{color: black;}
       td{color: blueviolet;}
       
-      #hidden{color: yellow; font-size: 3vw;}
+      #hidden{color: yellow; font-size: 3vw; position: absolute;}
     </style>
 
       <!-- Jquery -->
