--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
   
     <title>Test subject 1</title>
 
+
+    <!-- CSS STYLES -->
+    <style>
+      #test
+      {
+        display: none;
+      }
+    </style>
+
+
+
+
+
   </head>
   
 
